--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "d3-scale": "^4.0.2",
     "i18next": "^25.0.0",
     "i18next-browser-languagedetector": "^8.0.5",
+    "lucide-react": "^0.503.0",
     "papaparse": "^5.5.2",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
