--- a/public/manifest.json
+++ b/public/manifest.json
@@ -38,7 +38,7 @@
   ],
   "icons": [
     {
-      "src": "/vite.svg",
+      "src": "/research-icon.svg",
       "sizes": "any",
       "type": "image/svg+xml",
       "purpose": "any"
