--- a/public/manifest.json
+++ b/public/manifest.json
@@ -39,15 +39,27 @@
   "icons": [
     {
       "src": "/research-icon.svg",
-      "sizes": "any",
+      "sizes": "32x32",
       "type": "image/svg+xml",
       "purpose": "any"
     },
     {
-      "src": "/emerge_logo.svg",
-      "sizes": "any",
+      "src": "/pwa-icon-192.svg",
+      "sizes": "192x192",
       "type": "image/svg+xml",
-      "purpose": "any maskable"
+      "purpose": "any"
+    },
+    {
+      "src": "/pwa-icon-512.svg",
+      "sizes": "512x512",
+      "type": "image/svg+xml",
+      "purpose": "any"
+    },
+    {
+      "src": "/pwa-icon-512.svg",
+      "sizes": "512x512",
+      "type": "image/svg+xml",
+      "purpose": "maskable"
     }
   ],
   "prefer_related_applications": false,
